--- a/index.html
+++ b/index.html
@@ -7,8 +7,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css"> -->
-  <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/dark.css" /> -->
+
+  <link rel="apple-touch-icon" type="image/png" sizes="180x180"
+    href="https://raycast.com/assets/static/favicon.7b22250.628b74797b5186d6caec6476f06179e0.png">
+  <link rel="icon" type="image/png" sizes="16x16"
+    href="https://raycast.com/assets/static/favicon.ce0531f.628b74797b5186d6caec6476f06179e0.png">
+  <link rel="icon" type="image/png" sizes="32x32"
+    href="https://raycast.com/assets/static/favicon.ac8d93a.628b74797b5186d6caec6476f06179e0.png">
+  <link rel="icon" type="image/png" sizes="96x96"
+    href="https://raycast.com/assets/static/favicon.b9532cc.628b74797b5186d6caec6476f06179e0.png">
+  <link rel="apple-touch-icon" type="image/png" sizes="76x76"
+    href="https://raycast.com/assets/static/favicon.f22e9f3.628b74797b5186d6caec6476f06179e0.png">
+  <link rel="apple-touch-icon" type="image/png" sizes="152x152"
+    href="https://raycast.com/assets/static/favicon.62d22cb.628b74797b5186d6caec6476f06179e0.png">
+  <link rel="apple-touch-icon" type="image/png" sizes="120x120"
+    href="https://raycast.com/assets/static/favicon.1539b60.628b74797b5186d6caec6476f06179e0.png">
+  <link rel="apple-touch-icon" type="image/png" sizes="167x167"
+    href="https://raycast.com/assets/static/favicon.dc0cdc5.628b74797b5186d6caec6476f06179e0.png">
+
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/style.min.css"
     title="docsify-darklight-theme" type="text/css" />
 </head>
