Website: Add stylesheet

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
   <link rel="apple-touch-icon" type="image/png" sizes="167x167"
     href="https://raycast.com/assets/static/favicon.dc0cdc5.628b74797b5186d6caec6476f06179e0.png">
 
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/style.min.css"
-    title="docsify-darklight-theme" type="text/css" />
+  <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 
 <body>
