Website: Add zoom-image

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js">
   </script>
 
+  <!-- zoom-image  -->
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
 </body>
 
 </html>
