Website: Set default route

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     window.$docsify = {
       name: 'Raycast Script Commands',
       repo: 'https://github.com/raycast/script-commands',
+      homepage: '#/README.md', // <-- not doing much
+      nameLink: '#/README',
       loadSidebar: true,
       subMaxLevel: 3,
       search: {
